@@ -4,6 +4,7 @@
 * OpenStreetMap add touchZoom map option - ADDED
 * Preview page is not showing post images & tabs on Listimia theme - FIXED
 * Kleo theme, remove force legacy styles if version >= 4.9.170 - CHANGED
+* Video fields now support image screenshots in the GD > Post Images widget eg: video_screenshot - ADDED
 
 = 2.1.0.3 =
 * Kleo & Listimia themes not compatible with new AUI styles, revert to legacy styles if active - FIXED
